# workdir/cmd/api/handlers/auth.go
@@ -63,6 +63,7 @@ type authController struct {
 //	@Param			body	body		SignUpRequest				true	"Credentials of the new account"
 //	@Success		201		{object}	UserResponse				"Account created"
 //	@Failure		400		{object}	errors.HTTPErrorResponse	"Invalid username or password"
+//	@Failure		403		{object}	errors.HTTPErrorResponse	"Password sign-up is disabled (AUTH_PASSWORD_LOGIN_ENABLED=false)"
 //	@Failure		409		{object}	errors.HTTPErrorResponse	"Username already taken"
 //	@Failure		500		{object}	errors.HTTPErrorResponse	"Internal error"
 //	@Router			/auth/signup [post]
@@ -89,6 +90,7 @@ func (c *authController) SignUp(w http.ResponseWriter, r *http.Request) {
 //	@Security		BasicAuth
 //	@Success		200	{object}	TokenResponse				"Signed in"
 //	@Failure		401	{object}	errors.HTTPErrorResponse	"Missing or invalid credentials"
+//	@Failure		403	{object}	errors.HTTPErrorResponse	"Password sign-in is disabled (AUTH_PASSWORD_LOGIN_ENABLED=false)"
 //	@Failure		500	{object}	errors.HTTPErrorResponse	"Internal error"
 //	@Router			/auth/signin [post]
 func (c *authController) SignIn(w http.ResponseWriter, r *http.Request) {
